# demo

./: .gitignore  0_Home.py  2_DCF.py  Expanded Line-Item Automation.txt  README.md  load_chromadb.py  pyproject.toml  test.ipynb  test.py  theme_utils.py
.streamlit/: config.toml
10K Docs/: 20241001_10-Q_edgar_data_1190370_0001731122-24-001521.txt  20241001_10-Q_edgar_data_16160_0001562762-24-000230.txt  20241001_10-Q_edgar_data_1857910_0001599916-24-000226.txt  20241001_10-Q_edgar_data_63754_0000063754-24-000064.txt  20241001_10-Q_edgar_data_723531_0000950170-24-110834.txt  20241002_10-K-A_edgar_data_1127371_0001628280-24-041802.txt  20241002_10-K-A_edgar_data_1442492_0001199835-24-000442.txt  20241002_10-K-A_edgar_data_1632127_0001632127-24-000123.txt  20241002_10-K-A_edgar_data_1680132_0001393905-24-000341.txt  20241002_10-K-A_edgar_data_1690536_0001628280-24-041860.txt  20241002_10-Q-A_edgar_data_1632127_0001632127-24-000124.txt  20241002_10-Q-A_edgar_data_1632127_0001632127-24-000125.txt  20241002_10-Q-A_edgar_data_1703625_0001199835-24-000433.txt  20241002_10-Q_edgar_data_110621_0000950170-24-111319.txt  20241002_10-Q_edgar_data_1173420_0001171843-24-005458.txt  20241002_10-Q_edgar_data_1533357_0001477932-24-006165.txt  20241002_10-Q_edgar_data_1584480_0001640334-24-001476.txt  20241002_10-Q_edgar_data_1679273_0001679273-24-000073.txt  20241002_10-Q_edgar_data_1758009_0001213900-24-084716.txt  20241002_10-Q_edgar_data_1758009_0001213900-24-084727.txt  20241002_10-Q_edgar_data_23217_0001558370-24-013126.txt  20241002_10-Q_edgar_data_920760_0001628280-24-041915.txt  20241002_10-Q_edgar_data_94845_0000094845-24-000058.txt  20241003_10-Q-A_edgar_data_2013639_0000950170-24-112280.txt  20241003_10-Q_edgar_data_16918_0000016918-24-000178.txt  (+5776 more)
(+33 files in other folders)
