[project]
name = "dcf_project"
version = "0.1.0"
description = ""
authors = [
    {name = "Samuel Brooks",email = "samuel111503@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "numpy-financial (>=1.0.0,<2.0.0)",
    "config (>=0.5.1,<0.6.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
